--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,36 +6,12 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/CMakeModules")
 
-FIND_PACKAGE(OpenGL REQUIRED)
-FIND_PACKAGE(SDL2 REQUIRED)
-FIND_PACKAGE(GLEW REQUIRED)
-FIND_PACKAGE(GLM REQUIRED)
-
 SET(CXX11_FLAGS -std=gnu++11)
 SET(CDEBUG_FLAGS -g)
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CXX11_FLAGS} ${CDEBUG_FLAGS}")
-SET(TARGET_LIBRARIES "${OPENGL_LIBRARY} ${SDL2_LIBRARY}")
-
-IF(UNIX)
-  ADD_DEFINITIONS(-DUNIX)
-ENDIF(UNIX)
-
-IF(NOT APPLE)
-  IF(GLEW_FOUND)
-      INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIRS})
-      LINK_LIBRARIES(${GLEW_LIBRARIES})
-  ENDIF(GLEW_FOUND)
-ENDIF(NOT APPLE)
 
 # Set Includdes
-INCLUDE_DIRECTORIES(
-  "${PROJECT_SOURCE_DIR}/include"
-  ${SDL2_INCLUDE_DIR}
-  ${GLM_INCLUDE_DIRS}
-)
-
-# Copy shaders, models, and default config
-FILE(COPY src/shaders DESTINATION .)
+INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")
 
 # Set sources
 FILE(GLOB_RECURSE SOURCES "src/*.cpp")
@@ -49,5 +25,3 @@ add_custom_target("${PROJECT_NAME}_SUCCESSFUL" ALL
                   COMMAND ${CMAKE_COMMAND} -E echo "====================="
                   COMMAND ${CMAKE_COMMAND} -E echo "${CMAKE_CURRENT_BINARY_DIR}"
                  )
-
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OPENGL_LIBRARY} ${SDL2_LIBRARY})
